--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -563,3 +563,51 @@
   -webkit-filter: invert(0);
   filter: invert(0);
 }
+
+.speech-bubble-p1{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  z-index: 55;
+  position: absolute;
+  left: 60px;
+  top: 24%;
+  opacity: .8;
+  border-radius: 20%;
+  height: 200px;
+  border: 1px double;
+  width: 200px;
+  background: #f0efef;
+  -webkit-animation: fadein 1s;
+  -moz-animation: fadein 1s;
+  -ms-animation: fadein 1s;
+  -o-animation: fadein 1s;
+  animation: fadein 1s;
+}
+
+.speech-bubble-p2{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  opacity: .8;
+  border-radius: 20%;
+  height: 200px;
+  border: 1px double;
+  width: 200px;
+  background: #f0efef;
+  z-index: 55;
+  position: absolute;
+  right: 40px;
+  top: 24%;
+  -webkit-animation: fade-screen 1s; /* Safari, Chrome and Opera > 11.1 */
+       -moz-animation: fade-screen 1s; /* Firefox < 16 */
+        -ms-animation: fade-screen 1s; /* Internet Explorer */
+         -o-animation: fade-screen 1s; /* Opera < 11.1 */
+            animation: fade-screen 1s;
+}
