--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Pokemon Tweet Attack</title>
     <%= csrf_meta_tags %>
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade|Geo|Monoton|Roboto" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
