add end game screen

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,9 @@
 
 <h2>SELECT YOUR POKEMON TEAM</h2>
 <div id="pokemon-list">
-
+  <div class="loader">
+    <img src="http://codepen.io/boltaway/pen/BjyFb/image/large.png"/>
+  </div>
 </div>
 
 <div class="team-container">
