--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -531,6 +531,7 @@
   right: 0px;
   margin: auto;
   width: 300px;
+  max-height: 600px;
   -webkit-animation: fade-screen 2s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fade-screen 2s; /* Firefox < 16 */
         -ms-animation: fade-screen 2s; /* Internet Explorer */
@@ -600,6 +601,8 @@
 }
 
 .speech-bubble-p1{
+  padding: 5px;
+  overflow: hidden;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -624,6 +627,8 @@
 }
 
 .speech-bubble-p2{
+  padding: 5px;
+  overflow: hidden;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -666,15 +671,96 @@
 }
 
 .end-game-modal{
-  background-color: rgba(0,0,222,0.8);
+  background-color: rgba(0,0, 22,0.8);
   position: absolute;
   overflow: hidden;
   left: 0;
   right: 0;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
   z-index: 75;
   -webkit-animation: fade 2s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fade 2s; /* Firefox < 16 */
         -ms-animation: fade 2s; /* Internet Explorer */
          -o-animation: fade 2s; /* Opera < 12.1 */
             animation: fade 2s;
+}
+
+.nurse-joy {
+  /*position: absolute;
+  top: 20%;
+  left: 0px;
+  right: 0px;
+  margin: auto;*/
+}
+
+.game-over{
+  /*top: 20%;
+  left: 40%;
+  margin: auto;
+  position: absolute;*/
+  font-family: 'Bungee Shade', cursive;
+  font-size: 70px;
+  color: orange;
+}
+
+.game-winner{
+  /*top: 30%;
+  left: 40%;
+  margin: auto;
+  position: absolute;*/
+  font-family: 'Bungee Shade', cursive;
+  font-size: 70px;
+  color: orange;
+}
+
+.start-over{
+  margin: 5px;
+  margin-top: 20px;
+  padding:5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 100px;
+  border: 3px inset white;
+  border-radius: 5px;
+  /*top: 30%;
+  left: 40%;
+  margin: auto;
+  position: absolute;*/
+  font-family: 'Bungee Shade', cursive;
+  font-size: 30px;
+  color: white;
+  -webkit-transition: color 2s; /* Safari */
+   transition: color 2s;
+}
+
+.start-over:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+  color: orange;
+}
+
+.start-over:active{
+  transform: scale(0.9);
+  cursor: pointer;
+}
+
+.loader {
+
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    animation: spin 2s linear infinite;
+}
+
+.loader img{
+  width: 100%;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
