--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -749,11 +749,10 @@
 }
 
 .loader {
-
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    animation: spin 2s linear infinite;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  animation: spin 2s linear infinite;
 }
 
 .loader img{
@@ -763,4 +762,13 @@
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+#fetching-pokemon-loader{
+  z-index: 80;
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
