--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,16 @@
     <title>Pokemon Tweet Attack</title>
     <%= csrf_meta_tags %>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99899272-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade|Geo|Monoton|Roboto" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
