--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Pokemon Tweet Attack</title>
     <%= csrf_meta_tags %>
-    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
+ <link rel="shortcut icon" href="https://s3.amazonaws.com/beathub-dev/pics/pokemon.png" type="image/x-icon">
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
