--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -772,3 +772,14 @@
   right: 0;
   margin: auto;
 }
+
+.giphyLogo{
+  height: 20px;
+}
+
+.title-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
