--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,7 @@
-
-<h1>Pokemon Tweet Attack!</h1>
+<div class="title-container">
+  <h1>Pokemon Tweet Attack!</h1>
+  <img class="giphyLogo" src="https://thegiforacle.com/img/giphy.gif" alt="">
+</div>
 
 <h2>SELECT YOUR POKEMON TEAM</h2>
 <div id="pokemon-list">
